2002-06-03  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* gda-config.c: don't write mtime, muser.

2002-06-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-quark-list.[ch] (gda_quark_list_remove): new function.

	* libgda/gda-connection.c (gda_connection_new): remove entries
	we managed from the parameter list, so that providers dont' have
	to parse it again.

	* libgda/gda-server-provider.c (gda_server_provider_open_connection):
	likewise.

	* libgda/gda-client.c (gda_client_open_connection_from_string):
	new function. Fixes #81592.

2002-06-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in: check for all providers unless --without-* arguments
	are used.

	* libgda/gda-server-provider.[ch]: added change_database virtual
	method to GdaServerProvider class.
	(gda_server_provider_change_database): new function.

	* libgda/gda-connection.[ch] (gda_connection_change_database): new
	function.

	* doc/C/libgda-docs.sgml: added reference to new virtual method to
	be implemented for providers.

	* providers/oracle/gda-oracle-connection.[ch]: compilation fixes.

2002-06-03  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-connection.[ch]:
	* libgda/gda-server-provider.[ch]:
	* providers/mysql/gda-mysql-provider.c:
	* providers/sqlite/gda-sqlite-provider.c:
	* providers/default/gda-default-provider.c:
	* providers/mdb/gda-mdb-provider.c:
	* providers/postgres/gda-postgres-provider.c: use GdaTransaction for
	transaction related methods.

	* libgda/gda-transaction.[ch]: new class.

	* libgda/Makefile.am:
	* libgda/libgda.h: added new API file.

2002-06-03  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-connection.c (gda_connection_new): use the correct
	pointers, or it'll crash.

2002-06-03  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-config.[ch]: 
	(gda_config_get_type): new function to get the type of an entry.

	(gda_config_has_key):
	(gda_config_has_section): also look for section/keys in global data.
	