@@ -119,6 +119,7 @@ typedef enum {
 	GDA_CONNECTION_SCHEMA_DATABASES,
 	GDA_CONNECTION_SCHEMA_FIELDS,
 	GDA_CONNECTION_SCHEMA_INDEXES,
+	GDA_CONNECTION_SCHEMA_PARENT_TABLES,
 	GDA_CONNECTION_SCHEMA_PROCEDURES,
 	GDA_CONNECTION_SCHEMA_SEQUENCES,
 	GDA_CONNECTION_SCHEMA_TABLES,
