@@ -47,6 +47,9 @@ static gboolean gda_mysql_provider_close_connection (GdaServerProvider *provider
 						     GdaConnection *cnc);
 static const gchar *gda_mysql_provider_get_database (GdaServerProvider *provider,
 						     GdaConnection *cnc);
+static gboolean gda_mysql_provider_change_database (GdaServerProvider *provider,
+		                                    GdaConnection *cnc,
+		                                    const gchar *name);
 static gboolean gda_mysql_provider_create_database (GdaServerProvider *provider,
 						    GdaConnection *cnc,
 						    const gchar *name);
@@ -92,6 +95,7 @@ gda_mysql_provider_class_init (GdaMysqlProviderClass *klass)
 	provider_class->open_connection = gda_mysql_provider_open_connection;
 	provider_class->close_connection = gda_mysql_provider_close_connection;
 	provider_class->get_database = gda_mysql_provider_get_database;
+	provider_class->change_database = gda_mysql_provider_change_database;
 	provider_class->create_database = gda_mysql_provider_create_database;
 	provider_class->drop_database = gda_mysql_provider_drop_database;
 	provider_class->execute_command = gda_mysql_provider_execute_command;
@@ -317,6 +321,36 @@ gda_mysql_provider_get_database (GdaServerProvider *provider,
 	}
 
 	return (const gchar *) mysql->db;
+}
+
+/* change_database handler for the GdaMysqlProvider class */
+static gboolean
+gda_mysql_provider_change_database (GdaServerProvider *provider,
+		                    GdaConnection *cnc,
+				    const gchar *name)
+{
+	gint rc;
+	MYSQL *mysql;
+	GdaMysqlProvider *myprv = (GdaMysqlProvider *) provider;
+
+	g_return_val_if_fail (GDA_IS_MYSQL_PROVIDER (myprv), FALSE);
+	g_return_val_if_fail (GDA_IS_CONNECTION (cnc), FALSE);
+	g_return_val_if_fail (name != NULL, FALSE);
+
+	mysql = g_object_get_data (G_OBJECT (cnc), OBJECT_DATA_MYSQL_HANDLE);
+	if (!mysql) {
+		gda_connection_add_error_string (cnc, _("Invalid MYSQL handle"));
+		return FALSE;
+	}
+
+	rc = mysql_select_db (mysql, name);
+	if (rc != 0) {
+		gda_connection_add_error (cnc, gda_mysql_make_error (mysql));
+		return FALSE;
+	}
+
+	return TRUE;
+
 }
 
 /* create_database handler for the GdaMysqlProvider class */
